--- a/Base - V1/Base - V1.csproj
+++ b/Base - V1/Base - V1.csproj
@@ -10,6 +10,8 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="AForge.Video" Version="2.2.5" />
+    <PackageReference Include="AForge.Video.DirectShow" Version="2.2.5" />
     <PackageReference Include="GSF.Core" Version="2.4.28" />
     <PackageReference Include="MySql.Data" Version="8.4.0" />
   </ItemGroup>
