--- a/Base - V1/Base - V1.csproj
+++ b/Base - V1/Base - V1.csproj
@@ -16,7 +16,10 @@
     <PackageReference Include="AForge.Video" Version="2.2.5" />
     <PackageReference Include="AForge.Video.DirectShow" Version="2.2.5" />
     <PackageReference Include="GSF.Core" Version="2.4.28" />
-    <PackageReference Include="MySql.Data" Version="8.4.0" />
+    <PackageReference Include="MaterialSkin" Version="0.2.1" />
+    <PackageReference Include="MaterialSkin.2" Version="2.3.1" />
+    <PackageReference Include="MySql.Data" Version="9.1.0" />
+    <PackageReference Include="Syncfusion.SfSkinManager.WPF" Version="27.1.56" />
   </ItemGroup>
 
   <ItemGroup>
