Creacion del apartado de pruebas

--- a/Base - V1/Base - V1.csproj
+++ b/Base - V1/Base - V1.csproj
@@ -15,11 +15,17 @@
     <PackageReference Include="AForge.Math" Version="2.2.5" />
     <PackageReference Include="AForge.Video" Version="2.2.5" />
     <PackageReference Include="AForge.Video.DirectShow" Version="2.2.5" />
+    <PackageReference Include="Appium.WebDriver" Version="6.0.1" />
     <PackageReference Include="GSF.Core" Version="2.4.28" />
     <PackageReference Include="MaterialSkin" Version="0.2.1" />
     <PackageReference Include="MaterialSkin.2" Version="2.3.1" />
+    <PackageReference Include="MSTest.TestAdapter" Version="3.6.3" />
+    <PackageReference Include="MSTest.TestFramework" Version="3.6.3" />
     <PackageReference Include="MySql.Data" Version="9.1.0" />
+    <PackageReference Include="NUnit" Version="4.2.2" />
+    <PackageReference Include="NUnit3TestAdapter" Version="4.6.0" />
     <PackageReference Include="Syncfusion.SfSkinManager.WPF" Version="27.1.56" />
+    <PackageReference Include="WindowsAzure.ServiceBus" Version="7.0.1" />
   </ItemGroup>
 
   <ItemGroup>
