--- a/plan_de_prueba/plan_de_prueba.csproj
+++ b/plan_de_prueba/plan_de_prueba.csproj
@@ -24,4 +24,8 @@
 	  <ProjectReference Include="..\Base - V1\Base - V1.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="Test\Pruebas_Unitarias\" />
+  </ItemGroup>
+
 </Project>
